0.6.2 (currently working on)
- [#2105] Change: Remove the empty option from the top of the event type selector widget
- [#2074] Change: Add some tests and some code cleanup
- [#803] Change: Remove the _doEvents() method from the registration editor and the event editor
- [#964] Change: some code cleanup
- [#2092] Change: Update the test record icon in seminars and oelib
- [#2067] Change: All fields from the FE user table should be usable in the notification e-mail
- [#1902] Fix: "Reset filter" doesn't work
- [#2003] Fix: Empty lines in the FE user data on the second registration page
- [#2001] Fix: City of event site doesn't appear in the event single view although it's entered in the BE
- [#2011] Fix: hideFieldsInNotificationMail doesn't work
- [#2018] Fix: Hidden single events still are visible in the list view limited to a category
- [#1977] Change: add some unit tests
- [#1894] Change: Only reset the auto_increment value if it is much higher than the highest UID

0.6.1 (released 2008-05-30)
- [#1914] Change: Build all redirection links and links in e-mails using cObj->typoLink_URL
- [#1908] Fix: Registration for event not possible if umlauts in fe-user "Name" field
- [#1099] Change: Use the new function names from the templatehelper
- [#1895] Change: getRecordProperty* should be public, not protected
- [#1903] Change: Use $this->setExpectedException() instead of try-catch-block in Unit tests

0.6.0 (released 2008-05-12)
- [#1339] Feature: Add a switch that controls when unregistration is possible
- [#1408] Feature: Create a list of categories
- [#1874] Fix: Crash on the "my events page" after unregistering from an event
- [#1873] Fix: Crash when clicking on a CSV icon in mod2
- [#1854] Change: Remove notYetImplementedSubModule from mod2/locallang.xml
- [#1686] Fix: Removed wrongly encoded stuff from Danish translation in locallang file
- [#1165] Feature: Add a checkbox "Skip registration collision check" to event records